@@ -42,6 +42,7 @@ namespace Mono.Debugging.Evaluation
 		int runningThreads;
 		bool mainThreadBusy;
 		bool useTimeout;
+		bool disposed;
 		
 		public TimedEvaluator (): this (true)
 		{
@@ -127,10 +128,18 @@ namespace Mono.Debugging.Evaluation
 		{
 			Task threadTask = null;
 			
-			while (true) {
+			while (!disposed) {
 
 				if (threadTask == null) {
 					newTaskEvent.WaitOne ();
+					
+					lock (runningLock) {
+						if (disposed) {
+							runningThreads--;
+							return;
+						}
+					}
+					
 					threadTask = currentTask;
 					currentTask = null;
 				}
@@ -144,13 +153,20 @@ namespace Mono.Debugging.Evaluation
 				
 				OnEndEval ();
 
+				lock (runningLock) {
+					if (disposed) {
+						runningThreads--;
+						return;
+					}
+				}
+				
 				lock (curTask) {
 					if (!curTask.TimedOut)
 						continue; // Done. Keep waiting for more tasks.
 					
 					SafeRun (curTask.FinishedCallback);
 				}
-				
+
 				// The task timed out, so more threads may already have
 				// been created while this one was busy.
 				
@@ -175,11 +191,19 @@ namespace Mono.Debugging.Evaluation
 				}
 			}
 		}
+		
+		public void Dispose ()
+		{
+			disposed = true;
+			CancelAll ();
+			newTaskEvent.Set ();
+		}
 
 		public void CancelAll ()
 		{
 			lock (runningLock) {
 				pendingTasks.Clear ();
+				Monitor.PulseAll (runningLock);
 			}
 		}
 
